tests/pp-fail/bad_undef2.fl
\define Foo
\undef Foo
\undef Foo
